--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "lite-server --baseDir=app",
+    "dev": "lite-server --baseDir=app",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint app/scripts/*.js",
     "lint:fix": "eslint --fix app/scripts/*.js"
