--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "lite-server --baseDir=app",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint app/scripts/*.js",
-    "lint:fix": "eslint --fix app/scripts/*.js"
+    "lint": "eslint app/scripts/**/*.js",
+    "lint:fix": "eslint --fix app/scripts/**/*.js"
   },
   "husky": {
     "hooks": {
