--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --history-api-fallback --inline --progress",
+    "start": "webpack -w ",
+    "dev": "lite-server --baseDir=dist",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src/app/**/*.js",
-    "lint:fix": "eslint --fix src/app/**/*.js"
+    "lint:fix": "eslint --fix src/app/**/*.js",
+    "deploy": "gh-pages -d dist"
   },
   "husky": {
     "hooks": {
@@ -31,8 +33,11 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
     "file-loader": "^6.1.0",
+    "gh-pages": "^3.1.0",
+    "html-loader": "^1.3.0",
     "html-webpack-plugin": "^4.4.1",
     "husky": "^4.3.0",
+    "lite-server": "^2.5.4",
     "mini-css-extract-plugin": "^0.11.2",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-loader": "^4.0.2",
